--- a/Segmenting_and_Clustering.ipynb
+++ b/Segmenting_and_Clustering.ipynb
@@ -387,9 +387,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "map_toronto"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -498,7 +496,9 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -552,15 +552,31 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "map_toronto"
+    "import json\n",
+    "import urllib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'license_title': 'Open Government Licence – Toronto', 'owner_unit': None, 'relationships_as_object': [], 'topics': 'Finance,Locations and mapping', 'owner_email': 'opendata@toronto.ca', 'excerpt': 'This outlines the current tax year phased-in average Current Value Assessment (CVA) tax impact on residential properties.', 'private': False, 'owner_division': 'Corporate Finance', 'num_tags': 7, 'id': '977715a7-ef76-4a6d-97bd-e8bb40cec1ae', 'metadata_created': '2019-07-23T16:59:40.418148', 'refresh_rate': 'Annually', 'title': 'Current Value Assessment (CVA)  Tax Impact Residential Properties', 'license_url': 'https://open.toronto.ca/open-data-license/', 'state': 'active', 'information_url': 'http://www.toronto.ca/finance/tax_policies.htm', 'license_id': 'open-government-licence-toronto', 'type': 'dataset', 'resources': [{'cache_last_updated': None, 'package_id': '977715a7-ef76-4a6d-97bd-e8bb40cec1ae', 'datastore_active': False, 'id': 'd96c6824-f132-45d2-b10a-9f0a3d7c936c', 'size': 554416, 'format': 'SHP', 'state': 'active', 'hash': '', 'description': '', 'is_preview': False, 'last_modified': '2019-07-23T16:59:41.281109', 'url_type': 'upload', 'mimetype': 'application/zip', 'cache_url': None, 'extract_job': None, 'name': 'cva-tax-impact-2011-wgs84-latitude-longitude', 'created': '2019-07-23T16:59:41.324654', 'url': 'https://ckan0.cf.opendata.inter.prod-toronto.ca/dataset/977715a7-ef76-4a6d-97bd-e8bb40cec1ae/resource/d96c6824-f132-45d2-b10a-9f0a3d7c936c/download/cva-tax-impact-2011-wgs84-latitude-longitude.zip', 'mimetype_inner': None, 'position': 0, 'revision_id': 'c2ab0865-85dd-4206-b81e-e30cf8c13332', 'resource_type': None}], 'limitations': None, 'num_resources': 1, 'collection_method': None, 'tags': [{'vocabulary_id': None, 'state': 'active', 'display_name': 'current value assessment', 'id': '385ff6a2-7170-4c38-89dc-fab9e8fccd02', 'name': 'current value assessment'}, {'vocabulary_id': None, 'state': 'active', 'display_name': 'cva', 'id': '8070a2fe-b1d7-4494-a7ca-fb4b1c17aaa0', 'name': 'cva'}, {'vocabulary_id': None, 'state': 'active', 'display_name': 'cva tax', 'id': 'fb04cabf-4e89-4faa-9a3b-5ff6fdd6620a', 'name': 'cva tax'}], 'is_retired': False, 'groups': [], 'creator_user_id': '150d5301-86ec-44a3-a070-50f2cea839c9', 'dataset_category': 'Document', 'relationships_as_subject': [], 'name': 'current-value-assessment-cva-tax-impact-residential-properties', 'metadata_modified': '2019-12-05T17:27:15.009076', 'isopen': False, 'url': None, 'notes': '\\n\\nThis outlines the current tax year phased-in average Current Value Assessment (CVA) tax impact on residential properties. This is a geographical shape file outlining the polygons by wards and sub-divisions. See the Readme file for more details. \\n\\nThis shape file can be better utilized when overlaid with the Arterial Roads or Minor Roads or Street Centreline datasets.\\n', 'owner_org': '95a064ae-77e8-4ef0-a4e3-4e2d43e1f066', 'last_refreshed': '2011-12-31T00:00:00.000000', 'image_url': None, 'formats': 'SHP', 'owner_section': None, 'organization': {'description': '', 'created': '2019-07-23T15:51:35.236542', 'title': 'City of Toronto', 'name': 'city-of-toronto', 'is_organization': True, 'state': 'active', 'image_url': '', 'revision_id': '62817a72-3dc5-450a-8cc4-fef2c51660da', 'type': 'organization', 'id': '95a064ae-77e8-4ef0-a4e3-4e2d43e1f066', 'approval_status': 'approved'}, 'revision_id': 'c2ab0865-85dd-4206-b81e-e30cf8c13332', 'civic_issues': 'Fiscal responsibility'}\n"
+     ]
+    }
+   ],
    "source": []
   },
   {
